--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -30,11 +30,9 @@
         <h3 class="text-muted"><a href="/">MeetMe</a></h3>
     </div>
 
-
-
     <div class="jumbotron">
         <div class="tbl_wrp">
-            <form class="form-horizontal" th:action="@{/}" method="post">
+            <form class="form-horizontal" th:action="@{/signup}" method="post">
                 <div class="form-group">
                     <label for="username" class="col-sm-2 control-label">아이디</label>
                     <div class="col-sm-10">
