--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
+        <h1>밋미, 나를 만나보세요.</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p>
             <a class="btn btn-lg btn-success" href="/signup" role="button">회원가입</a>
