--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -59,12 +59,13 @@
                         <input type="email" class="form-control input-large" name="email" id="email" placeholder="이메일" required>
                     </div>
                 </div>
-<!--                <div class="form-group">-->
-<!--                    <label for="role" class="col-sm-2 control-label">권한</label>-->
-<!--                    <div class="col-sm-10">-->
-<!--                        <input type="text" class="form-control input-large" name="role" id="role" placeholder="권한" required>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="form-group">
+                    <label for="role" class="col-sm-2 control-label">권한</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control input-large" name="role" id="role" placeholder="권한" required>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10">
                         <button type="Submit" class="btn btn-lg btn-success">가입하기</button>
