--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,6 +41,7 @@
             <a class="btn btn-lg btn-success" href="/signup" role="button">회원가입</a>
             <a class="btn btn-lg btn-success" href="/login" role="button">로그인</a>
             <a class="btn btn-lg btn-success" href="/oauth2/authorization/google" role="button">구글 로그인</a>
+            <a class="btn btn-lg btn-success" href="/oauth2/authorization/naver" role="button">네이버 로그인</a>
         </p>
     </div>
 
